# standing-desk

./: .example_env  .pre-commit-config.yaml  desk.py  main.py  pyproject.toml
mqtt_connector/: connection.py
serial_connector/: connection.py
